[package]
name = "poc-rxv6"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "poc-rxv6"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# riscv = "0.10.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[profile.test]
panic = "abort"
